# velecs-ecs-cpp

./: CMakeLists.txt  Justfile  README.md  vcpkg.json
cmake/: ASan.cmake  Pedantic.cmake
include/velecs/ecs/: Common.hpp  Component.hpp  Entity.hpp  Entity.inl  EntityBuilder.hpp  EntityRef.hpp  Name.hpp  Object.hpp  Object.inl  ObjectManager.hpp  Registry.hpp  Scene.hpp  Scene.inl  SceneManager.hpp  SceneNode.hpp  SceneNodeRef.hpp  System.hpp  SystemStorage.hpp  Tag.hpp  Transform.hpp  TypeConstraints.hpp  World.hpp  World.inl
include/velecs/ecs/components/: ChildIterator.hpp  Hierarchy.hpp  Name.hpp  Relationship.hpp  Transform.hpp
include/velecs/ecs/internal/: EntityPersistence.hpp  EntityRegistry.hpp  IComponentContainer.hpp  SceneNodePersistence.hpp
include/velecs/ecs/tags/: DestroyTag.hpp
src/: Component.cpp  Entity.cpp  EntityBuilder.cpp  Object.cpp  ObjectManager.cpp  Registry.cpp  Scene.cpp  SceneManager.cpp  System.cpp  SystemStorage.cpp  Tag.cpp  Transform.cpp  World.cpp
src/components/: ChildIterator.cpp  Destroy.cpp  Hierarchy.cpp  Relationship.cpp  Transform.cpp
src/test/: main.cpp
tests/: test.cpp
tests/Sandbox/: CMakeLists.txt  Justfile  sandbox.cpp
